# crico_med_agent

./: README.md  pyproject.toml
data_engineering/: coordinate_shards_with_pathological.py  estimated_confusion_matrix.py  example_conversions.py  example_matrix.py  frame_split.py  partition_finished_studies.py  partition_time_by_job_count_shards.py  reassemble_shards.py
definitions/: instruction.txt  instruction_condition.txt
definitions/old/: 2  instruction.txt  instruction_condition.txt
inference/: anafora_data.py  interpretation.py  prompt.py  text_engineering.py  utils.py
parsing/: initial.txt
scripts/: compute_iaa_scores.sh  new_crico_shards.sh  reassemble_shards.sh
scripts/instruction_condition_parsing/: extraction_cot_multitag.sh  extraction_cot_test.sh  first_edit_extraction_test.sh  initial_extraction_test.sh  llama3.1_70b_2_shot_cot_revised_definition.sh  llama3.1_70b_cot_sbatch.sh  llama3.1_8b_2_shot_cot_revised_definition.sh  llama3.1_8b_cot_sbatch.sh  llama3.1_cot_test.sh  llama3_70B_cot_sbatch.sh  llama3_70b_2_shot_cot_revised_definition.sh  llama3_8b_2_shot_cot_revised_definition.sh  llama3_8b_cot_sbatch.sh
scripts/instruction_condition_parsing/1_or_fewer_shots/: extraction_test.sh
scripts/instruction_condition_parsing/2_shot_cot_defaults/: llama3.1_70b_2_shot_cot.sh  llama3.1_8b_2_shot_cot.sh  llama3_70b_2_shot_cot.sh  llama3_8b_2_shot_cot.sh
spanless_evaluation/: get_json_lines.py  score_json_lines.py
src/crico/: utils.py
src/crico/data_engineering/: abbreviate_anafora_tables.py  coordinate_shards_with_pathological.py  estimated_confusion_matrix.py  example_conversions.py  example_matrix.py  format_anafora_xml_directory.py  frame_split.py  iaa_partition_for_anafora.py  offset_fix.py  partition_finished_studies.py  partition_time_by_job_count_shards.py  reassemble_shards.py
src/crico/evaluation/: anafora_data.py  get_totals.py  interpretation.py  score_json_lines.py  validation.py
src/crico/inference/: prompt.py
src/crico/visualization/: write_to_org.py  write_to_survey.py
visualization/: write_to_org.py  write_to_survey.py
